estilizando os ultimos cards

--- a/styles/sections.css
+++ b/styles/sections.css
@@ -21,6 +21,7 @@ section header {
 }
 
 #featured {
+  grid-area: featured;
   img {
     height: 100%;
     object-fit: cover;
@@ -54,6 +55,7 @@ section header {
 }
 
 #weekly {
+  grid-area: weekly;
   & > div {
     grid-template-columns: repeat(4, 292px);
   }
@@ -76,4 +78,39 @@ section header {
       font-weight: 800;
     }
   }
+}
+
+#ai {
+  grid-area: ai;
+  img {
+    width: 176px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
+
+  h3 {
+    margin-block: 8px 4px;
+  }
+}
+
+aside {
+  grid-area: aside;
+}
+
+#more {
+  h3 {
+    margin-top: 8px;
+  }
+
+  img {
+    width: 90px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
+}
+
+.subtexto {
+  font-size: 13px;
+  margin-top: 10px;
+  font-weight: 600;
 }
